client/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  selector:
    matchLabels:
      app: client
  replicas: 1
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: CLIENT/IMAGE
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "150m"
            memory: "150Mi"
