client/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  type: NodePort
  selector:
    app: client
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30080
